tests/types/errors/closure_assign_to_const.mog
fn outer() i32 {
  const value i32 = 1;
  fn inner() i32 {
    value = 2;
    return value;
  }
  return inner();
}

print(outer());
